--- a/kotlinc/build.gradle
+++ b/kotlinc/build.gradle
@@ -74,22 +74,18 @@ tasks.build.dependsOn tasks.shadowJar
 shadowJar {  
     exclude 'META-INF/maven/org.jetbrains/*/pom.xml'
     exclude 'META-INF/maven/org.jetbrains/*/pom.properties'
-    exclude 'META-INF/maven/**'
-    exclude 'META-INF/*.SF'
-    exclude 'META-INF/*.DSA'
-    exclude 'META-INF/*.RSA'
+    exclude 'kotlin/**'
     exclude '**/*org/jetbrains/annotations/Nls*'
     exclude 'com/google/**'
-	exclude 'org/codehaus/**'
 
 
     dependencies {
         exclude(dependency("org.jetbrains:annotations:23.0.0"))
         exclude(dependency("org.jetbrains.kotlin:kotlin-reflect:1.6.10"))
-     //   exclude(dependency("org.jetbrains.kotlin:kotlin-stdlib:2.1.21"))
-    //    exclude(dependency("org.jetbrains.kotlin:kotlin-stdlib-jdk8:2.1.21"))
-    //    exclude(dependency("org.jetbrains.kotlin:kotlin-stdlib-jdk7:2.1.21"))
-       // exclude(dependency("org.jetbrains.kotlin:kotlin-stdlib-common:2.1.21"))
+        exclude(dependency("org.jetbrains.kotlin:kotlin-stdlib:2.1.21"))
+        exclude(dependency("org.jetbrains.kotlin:kotlin-stdlib-jdk8:2.1.21"))
+        exclude(dependency("org.jetbrains.kotlin:kotlin-stdlib-jdk7:2.1.21"))
+        exclude(dependency("org.jetbrains.kotlin:kotlin-stdlib-common:2.1.21"))
         exclude(dependency("org.jetbrains.kotlinx:kotlinx-coroutines-core-jvm:1.8.0"))
         exclude(dependency("org.jetbrains.kotlin:kotlin-script-runtime:2.1.21"))
      }
@@ -104,11 +100,6 @@ shadowJar {
 dependencies {
     implementation("org.jetbrains.kotlin:kotlin-compiler:2.1.21")
     implementation("org.jetbrains.intellij.deps:trove4j:1.0.20200330")
-	implementation("org.jetbrains.kotlin:kotlin-compiler:2.1.21")
-    implementation("org.jetbrains.kotlin:kotlin-stdlib:2.1.21")
-    implementation("org.jetbrains.kotlin:kotlin-stdlib-common:2.1.21")
-    implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk7:2.1.21")
-    implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:2.1.21")
 }
 
 publishing {
@@ -116,7 +107,7 @@ publishing {
         shadow(MavenPublication) {
             groupId = 'ir.ninjacoder.ktc'
             artifactId = project.name
-            version = '3'
+            version = '2.1.21'
             artifact(tasks.shadowJar) {
                 builtBy tasks.shadowJar
             }
